// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CorrectResponse renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={
      Array [
        "circle",
        "line",
        "label",
        "parabola",
        "point",
        "polygon",
        "ray",
        "segment",
        "sine",
        "vector",
      ]
    }
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is null it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`CorrectResponse: if answers is undefined it should still work as expected renders snapshot 1`] = `
<div>
  <WithStyles(Typography)
    component="div"
    variant="subheading"
  >
    <span>
      Define Tool Set and Correct Response
    </span>
  </WithStyles(Typography)>
  <WithStyles(Typography)
    component="div"
    variant="body1"
  >
    <span>
      Use this interface to choose which graphing tools students will be able to use, and to define the correct answer
    </span>
  </WithStyles(Typography)>
  <Tools
    classes={Object {}}
    onDefaultToolChange={[Function]}
    toggleToolBarTool={[Function]}
    toolbarTools={Array []}
  />
  <div
    onClick={[Function]}
  >
    ADD ALTERNATE
  </div>
  <Component
    open={false}
  />
</div>
`;

exports[`Tools renders snapshot 1`] = `
<div>
  <div>
    <span>
      GRAPHING TOOLS
    </span>
  </div>
  <div>
    <div
      className=""
      key="circle"
      onClick={[Function]}
    >
      CIRCLE
    </div>
    <div
      className=""
      key="line"
      onClick={[Function]}
    >
      LINE
    </div>
    <div
      className=""
      key="parabola"
      onClick={[Function]}
    >
      PARABOLA
    </div>
    <div
      className=""
      key="point"
      onClick={[Function]}
    >
      POINT
    </div>
    <div
      className=""
      key="polygon"
      onClick={[Function]}
    >
      POLYGON
    </div>
    <div
      className=""
      key="ray"
      onClick={[Function]}
    >
      RAY
    </div>
    <div
      className=""
      key="segment"
      onClick={[Function]}
    >
      SEGMENT
    </div>
    <div
      className=""
      key="sine"
      onClick={[Function]}
    >
      SINE
    </div>
    <div
      className=""
      key="vector"
      onClick={[Function]}
    >
      VECTOR
    </div>
    <div
      className=""
      key="label"
      onClick={[Function]}
    >
      LABEL
    </div>
  </div>
</div>
`;
